# RAGSynapse

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  README.md  config.toml  docker-compose.yml  pyproject.toml  requirements.txt  test_factory.py
.streamlit/: config.toml
src/: app.py
src/api/: dependencies.py  main.py  models.py
src/api/routes/: __init__.py  chat.py  documents.py  eval.py
src/ragsynapse/HTMLTemplates/: HTMLTemplates.py  __init__.py
src/ragsynapse/chat/: __init__.py  chat.py
src/ragsynapse/display_image/: __init__.py  display_image.py
src/ragsynapse/evaluation/: __init__.py  ragas_eval.py
src/ragsynapse/llm/: model_factory.py
src/ragsynapse/observability/: __init__.py  tracker.py
src/ragsynapse/pdf_ingest/: __init__.py  pdf_ingest.py
src/ragsynapse/pipeline/: __init__.py  pipeline.py
src/ragsynapse/stcomp/: __init__.py  stcomp.py
